# MPCengine

./: .cproject  .project  CMakeLists.txt  MPCSolver.cpp  MPCSolver.hpp  MPCproblem.hpp  MPCregulator.cpp  MPCregulator.hpp  MPCtracker.cpp  MPCtracker.hpp  TODO  current_func_handler  main.cpp  trajectories.hpp
apps/mpc_preprocessing/: .gitignore  install.m  mainFunctionGen.m  testingResultsFromCpp.m
apps/mpc_preprocessing/+ConfigFile/: robot_no_payload.m  robot_payload.m
apps/mpc_preprocessing/+Constraint/: README  Regulator_W_pattern_walking.m  regulator_G_statemachine_nonMut_std.m  regulator_G_statemachine_pattern_walkingRotation.m  regulator_G_std.m  regulator_S_statemachine_nonMut_std.m  regulator_S_std.m  regulator_W_nonMut_std.m  regulator_W_pattern_walking.m  regulator_W_statemachine_pattern_walking.m  regulator_W_std.m  tracker_G_nonMut_std.m  tracker_S_nonMut_std.m  tracker_W_nonMut_std.m  tracker_W_pattern_walking.m
apps/mpc_preprocessing/+CostFunc/: README  costFunction_regulator_std.m  propagationModel_regulator_fixed_std.m  propagationModel_regulator_ltv_std.m  propagationModel_regulator_statemachine_std.m  propagationModel_regulator_statemachine_walkingRotation.m  propagationModel_tracker_fixed_std.m  propagationModel_tracker_ltv_std.m  regulator_std.m  tracker_std.m
apps/mpc_preprocessing/+Env/: AbstractEnv.m  CartPole.m  EstimatedModel.m  InvPend.m  Pendubot.m  TwoRRobot.m  XLip_0.m  XYLip_0.m  XYLip_1.m  XYLip_2.m  XYLip_simplified_feet.m
apps/mpc_preprocessing/+MpcGen/: genMpcRegulator.m  genMpcTracker.m
apps/mpc_preprocessing/+MpcGen/@coreGenerator/: MutableConstraints_QPOASES.m  MutableConstraits_ub.m  QPOASESgenFunc.m  SlidingWindowCppFunction.m  StateMachineConstraints_QPOASES.m  StateMachineGenerator.m  StateMachineObjective_QPOASES.m  cCode.m  cHeader.m  ccodefunctionstring.m  coreGenerator.m
apps/mpc_preprocessing/+MpcModel/: How_to_create_a_model_mpc  cart_pole_0.m  cart_pole_1.m  oned_x_lip_0.m  oned_x_lip_foot_0.m  pendubot_0.m  two_r_robot_0.m  two_xy_lip_2.m  twod_xy_lip_0.m  twod_xy_lip_1.m  twod_xy_lip_2.m  twod_xy_lip_no_foot_model_automatic_footstep.m  twod_xy_lip_no_foot_model_automatic_footstep_with_rotation.m
apps/mpc_preprocessing/+Utils/: CopyPrmFromFile.m
apps/mpc_preprocessing/@log/: action_from_mpc_cpp.mat  state_from_mpc_cpp.mat  trajectories_from_matlab.mat
blaze-3.4/blaze/: Math.h
cmake/: MPCEngineConfig.cmake.in
configuration_file/: .gitignore
current_functions/: QPoasesFunction.h  qpOASESFunction.h  readme
include/: mpc_engine.h
include/api/: MPCproblem.hpp  MPCregulator.hpp  MPCtracker.hpp  OraclePlanner.hpp
include/current_func/: .gitignore
include/solvers/: AbsSolver.hpp  qpOASESFunction.h  qpoasesSolver.hpp
include/test_env/: 2Dxy_lip.hpp  2Dxy_lip_2.hpp  2Dxy_lip_simplified_foot.hpp  abstract_env.hpp  all_env.hpp  cart_pole.hpp  twoRRobot.hpp
include/trajectories/: sinusoidal_f.hpp  trajectories.hpp
mpc_preprocessing/: mainFunctionGen.m  mainFunctionGen.m~  testingResultsFromCpp.m
mpc_preprocessing/+ConfigFile/: payload_2R.m
mpc_preprocessing/+Ctrl/: AbstractController.m  mpcRegulator.m  mpcTracker.m
mpc_preprocessing/+Env/: AbstractEnv.m  CartPole.m  TwoRRobot.m  XYLip.m
mpc_preprocessing/+MpcGen/: genMpcRegulator.m  genMpcTracker.m  mpcRegulator.m
mpc_preprocessing/+MpcGen/@coreGenerator/: MutableConstraits_ub.m  cCode.m  coreGenerator.m  createHeaderStruct.m
mpc_preprocessing/+MpcModel/: How_to_create_a_model_mpc  cart_pole_0.m  two_r_robot_0.m  twod_xy_lip.m  twod_xy_lip_1.m
mpc_preprocessing/+Utils/: CopyPrmFromFile.m
mpc_preprocessing/+template_MPC_problem/: mpcRegulator.m
solvers/: AbsSolver.hpp  MPCsolver.hpp  all_solvers.hpp  qpOASESFunction.h  qpoasesSolver.cpp  qpoasesSolver.hpp
src/api/: MPCregulator.cpp  MPCtracker.cpp
src/current_func/: .gitignore
src/solvers/: qpoasesSolver.cpp
test_env/: 2Dxy_lip.hpp  abstract_env.hpp  all_env.hpp  cart_pole.hpp  twoRRobot.hpp
trajectories/: all_traj.hpp  all_traj_include.hpp  recorded_f.hpp  sinusoidal_f.hpp
